add character buffer class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,9 @@ endif()
 
 add_executable(${PROJECT_NAME} main.cpp
         Character.cpp
-        Character.h)
+        Character.h
+        CharacterBuffer.cpp
+        CharacterBuffer.h)
 #set(raylib_VERBOSE 1)
 target_link_libraries(${PROJECT_NAME} raylib)
 
