add screen class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,9 @@ add_executable(${PROJECT_NAME} main.cpp
         Character.cpp
         Character.h
         CharacterBuffer.cpp
-        CharacterBuffer.h)
+        CharacterBuffer.h
+        Screen.cpp
+        Screen.h)
 #set(raylib_VERBOSE 1)
 target_link_libraries(${PROJECT_NAME} raylib)
 
